--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,6 +1,23 @@
 /* for the mobile devices */
 @media screen and (max-width: 768px) {
 
+    #ai-actor-settings-wrapper.modal-mode {
+        position: fixed;
+        z-index: unset;
+        left: unset;
+        top: unset;
+        width: unset;
+        transform: unset;
+        box-shadow: unset;
+        z-index: 9999;
+        background-color: white;
+        box-shadow: unset;
+        display: block;
+        max-width: unset;
+        max-height: calc(100vh - 40px);
+        overflow-y: auto;
+    }
+
     #app-outer-wrapper {
         flex: 100;
         height: 100%;
